--- a/VBWEB/frontend/index.html
+++ b/VBWEB/frontend/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Disable COOP/COEP so popups can postMessage back -->
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="unsafe-none"/>
+    <meta http-equiv="Cross-Origin-Embedder-Policy" content="unsafe-none"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,5 +15,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
 </html>
